<resources>
    <string name="app_name">MY Wallet</string>
    <string name="stanjeNaslov">Wallet balance</string>
    <string name="stanje">Balance</string>
    <string name="dodaj">Add Money</string>
    <string name="troskovi">Add Expense</string>
    <string name="listaTransakcija">List of transactions </string>
    <string name="pocetna">Home</string>
    <string name="podesavanja">Settings</string>

    <string name="selected_language">English</string>
</resources>