<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f2f2"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#f2f2f2"
                android:elevation="0dp">
                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar"
                    app:contentInsetStartWithNavigation="0dp"
                    app:popupTheme="@style/Theme.Design.Light"
                    app:title="@string/app_name"
                    app:titleTextColor="#0288d1" />
            </com.google.android.material.appbar.AppBarLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#03a9f4"
                    app:cardCornerRadius="6dp"
                    app:cardElevation="2dp"
                    app:cardUseCompatPadding="true">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">
                            <View
                                android:layout_width="15dp"
                                android:layout_height="0dp" />
                            <TextView
                                android:id="@+id/text_stanjeunovcaniku"
                                android:text="@string/stanjeNaslov"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:fontFamily="sans-serif-medium"
                                android:gravity="center_vertical"
                                android:textColor="#B3E5FC" />
                            <ImageButton
                                android:onClick="ocisti"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:background="?attr/selectableItemBackground"
                                android:src="@drawable/ic_delete"
                                android:tint="#B3E5FC" />
                        </LinearLayout>
                        <View
                            android:layout_width="0dp"
                            android:layout_height="10dp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/stanje"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="#E1F5FE" />
                        <TextView
                            android:id="@+id/tvUkupanNovac"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-medium"
                            android:text="242.321"
                            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                            android:textColor="#FFFFFF" />
                        <TextView
                            android:id="@+id/tvValuta"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="RSD"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="#81d4fa" />
                        <View
                            android:layout_width="0dp"
                            android:layout_height="25dp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:elevation="2dp"
                        app:cardCornerRadius="6dp"
                        app:cardUseCompatPadding="true">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:onClick="povecajBrojNovca"
                            android:orientation="horizontal"
                            android:padding="15dp">
                            <RelativeLayout
                                android:layout_width="25dp"
                                android:layout_height="25dp">
                                <ImageView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:src="@drawable/ic_prihod"
                                    app:tint="#999999" />
                            </RelativeLayout>
                            <View
                                android:layout_width="20dp"
                                android:layout_height="0dp" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:fontFamily="sans-serif-medium"
                                android:text="@string/dodaj"
                                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                                android:textColor="#1A237E" />


                        </LinearLayout>

                    </androidx.cardview.widget.CardView>
                    <View
                        android:layout_width="3dp"
                        android:layout_height="0dp" />
                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:elevation="2dp"
                        app:cardCornerRadius="6dp"
                        app:cardUseCompatPadding="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:onClick="smanjiBrojNovca"
                            android:padding="15dp">

                            <RelativeLayout
                                android:layout_width="25dp"
                                android:layout_height="25dp">

                                <ImageView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:src="@drawable/ic_rashod"
                                    app:tint="#999999" />
                            </RelativeLayout>

                            <View
                                android:layout_width="20dp"
                                android:layout_height="0dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:fontFamily="sans-serif-medium"
                                android:text="@string/troskovi"
                                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                                android:textColor="#1A237E" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:text="@string/listaTransakcija"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="#999999" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_alignParentBottom="true" />
    </RelativeLayout>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/bottom_navigation_menu" />
</LinearLayout>